# concrete-type

./: Cargo.toml  README.md
concrete-type/: Cargo.toml  README.md
concrete-type-rules/: Cargo.toml  README.md
concrete-type-rules/src/: lib.rs
concrete-type-rules/tests/: test_gen_match_macro.rs
concrete-type/examples/: enum_variants_associated_with_concrete_types.rs  enum_variants_with_data_associated_with_concrete_types.rs
concrete-type/src/: lib.rs
examples/: enum_variants_associated_with_concrete_types.rs  enum_variants_with_data_associated_with_concrete_types.rs
src/: lib.rs
tests/: concrete_config_tests.rs  concrete_tests.rs
