[workspace]
members = [
    "concrete-type",
    "concrete-type-rules",
]
resolver = "3"

[workspace.dependencies]
# Concrete Type Ecosystem
concrete-type = { path = "./concrete-type", version = "0.3" }

# Other
syn = { version = "2.0.100", features = ["full", "extra-traits"] }
quote = "1.0.40"
convert_case = "0.10.0"
paste = "1.0.15"
proc-macro2 = "1.0.104"